<resources>
    <string name="app_name">Examen-Modulo4</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="wattpad_originals">Wattpad Originals</string>
    <string name="tienes_cinco_a_os_eres_un_iani_un_mensajero_de_los_muertos_y_los_fantasmas_no_te_han_abandonado">Tienes cinco años. Eres un Iani, un mensajero de los muertos, y los fantasmas no te han abandonado.</string>
    <string name="ver_m_s">Ver más.</string>
    <string name="imaginaciones_de_un_ni_o_enlutado">Imaginaciones de un niño enlutado</string>
    <string name="portada_del_libro">Portada del libro</string>
    <string name="la_perniciosa_sonrisa_de_jano">La perniciosa sonrisa de Jano</string>
    <string name="bouquet_of_winter_flowers">Bouquet of winter flowers</string>
    <string name="en_un_templo_abandonado_en_medio_de_las_monta_as_la_ofrenda_de_un_ni_o_despertar_una_fuerza_antigua_dispuesta_a_destruirlo_todo_a_su_paso">En un templo abandonado en medio de las montañas, la ofrenda de un niño despertará una fuerza antigua dispuesta a destruirlo todo a su paso.</string>
    <string name="perdido_en_una_tierra_desconocida_su_cuerpo_no_es_lo_nico_que_ofrece_a_sus_clientes_entre_el_aroma_a_incienso_los_sonidos_de_los_vendedores_ambulantes_y_el_chasquido_de_las_armas_su_don_de_ver_el_futuro_ha_despertado_m_s_de_una_ambici_n">Perdido en una tierra desconocida, su cuerpo no es lo único que ofrece a sus clientes. Entre el aroma a incienso, los sonidos de los vendedores ambulantes y el chasquido de las armas, su don de ver el futuro ha despertado más de una ambición.</string>
    <string name="perdido_en_una_tierra_desconocida_su_cuerpo_no_es_lo_nico_que_ofrece_a_sus_clientes">Perdido en una tierra desconocida, su cuerpo no es lo único que ofrece a sus clientes.</string>
    <string name="DescripcionLargaBouquet">En un templo abandonado en medio de las montañas, la ofrenda de un niño despertará una fuerza antigua dispuesta a destruirlo todo a su paso. Para asegurar la buena suerte en su mandato, los jefes de la familia Anzuhito necesitan una joya a su lado al subir a su puesto. Secuestrados, hermosos y lo suficiente jóvenes para olvidar, ocho niños pequeños son educados en la Antigua Casa de las Flores. Solo uno de ellos será elegido a la edad de dieciocho años, mientras que el resto desaparecerá sin dejar rastro. En medio de su sombrío futuro, la inocencia es todo lo que les queda, pero no por mucho tiempo. Sin embargo, cuando el Antiguo descubre la verdad detrás del lugar, salvarlos de las garras de la Casa de las Flores y sus secretos es la única salida.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Perniciosa_Des_Larga">Perdido en una tierra desconocida, su cuerpo no es lo único que ofrece a sus clientes. Entre el aroma a incienso, los sonidos de los vendedores ambulantes y el chasquido de las armas, su don de ver el futuro ha despertado más de una ambición.</string>
    <string name="Imaginaciones_Des_Larga">Tienes cinco años. Eres un Iani, un mensajero de los muertos, y los fantasmas no te han abandonado. *** Con las últimas palabras de tu padre en mente, la llegada al Principado de Nueva Barcelona está teñida de melancolía y nostalgia, así como del aroma a mar y la algarabía de una capital alegre. Sin embargo, en el pueblo milenario la verdad y la mentira se mezclan ante tus ojos, únicos testigos de las presencias sin rostro. Envuelto en los gemidos de las víctimas del pasado y los espectros que claman tu nombre, deberás vislumbrar la esperanza del futuro en medio de la muerte.</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="bienvenidos">Bienvenidos a nuestra aplicación de libros</string>
    <string name="libros">Libros</string>
    <string name="cr_ditos">Créditos</string>
    <string name="inicio">Inicio</string>
    <string name="nombre_autora">Ana Julia Guardia</string>
</resources>