<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFA9A9"
    tools:context=".ViewLibro1">

    <TextView
        android:id="@+id/descripcionlarga"
        android:layout_width="334dp"
        android:layout_height="169dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="52dp"
        android:text="@string/Imaginaciones_Des_Larga"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="218dp"
        android:layout_height="275dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/portada_del_libro"
        android:src="@drawable/_15409256_512_k640677"
        app:layout_constraintBottom_toTopOf="@+id/descripcionlarga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="233dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="14dp"
        android:text="@string/imaginaciones_de_un_ni_o_enlutado"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>